syntax = "proto3";

package chat.v1;

service ChatService {
  // rpc 创建对话
  rpc CreateConversation(CreateConversationRequest) returns (CreateConversationResponse);
  // 流式对话补全，支持新消息对话和重新生成
  rpc StreamChatCompletion(StreamChatCompletionRequest) returns (stream StreamChatCompletionResponse);
  // 获取对话列表
  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse);
  // 获取对话详情
  rpc GetConversation(GetConversationRequest) returns (GetConversationResponse);
  // 获取对话消息历史
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);
  // 删除对话
  rpc DeleteConversation(DeleteConversationRequest) returns (DeleteConversationResponse);
  // 修改对话
  rpc UpdateConversation(UpdateConversationRequest) returns (UpdateConversationResponse);
}

message Conversation {
  string id = 1;
  string user_id = 2;
  string title = 3;
  bool starred = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateConversationRequest {
  string initial_message = 1;
}

message CreateConversationResponse {
  Conversation conversation = 1;
}

enum Feature {
  FEATURE_UNSPECIFIED = 0;
  FEATURE_SEARCH_WEB = 1; // 网页搜索
  FEATURE_GENERATE_IMAGE = 2; // 图片生成
  FEATURE_BROWSER_URL = 3; // 浏览
}

message StreamChatCompletionRequest {
  string conversation_id = 1; // 对话 ID，用于上下文
  string model = 2; // 要使用的 AI 模型，如果是重新生成且不指定，则使用原模型
  string message = 3; // 用户输入的消息，重新生成时可为空
  repeated Feature features = 4; // 启用的功能列表，空列表或 FEATURE_UNSPECIFIED 表示仅文本对话
  repeated File files = 5; // 上传的文件
}

message StreamChatCompletionResponse {
  string message = 1;
  repeated SearchResult search_results = 2;
  repeated string generated_image_urls = 3;
  Feature running_feature = 4; // 当前正在执行的功能
}

message MetaUrl {
  string scheme = 1;
  string netloc = 2;
  string hostname = 3;
  string path = 4;
  string favicon = 5;
}

message SearchResult {
  string url = 1;
  string title = 2;
  string description = 3;
  MetaUrl meta_url = 4;
}

message File {
  string url = 1;
  string mime_type = 2;
  string file_name = 3;
}

message Message {
  string id = 1;
  string user_id = 2;
  string conversation_id = 3;
  string role = 4;
  string message = 5;
  repeated File files = 6;
  repeated string generated_image_urls = 7;
  repeated SearchResult search_results = 8;
  string created_at = 9;
  string updated_at = 10;
}

message ListConversationsRequest {
  // 无需字段
}

message ListConversationsResponse {
  repeated Conversation conversations = 1;
}

message GetConversationRequest {
  string conversation_id = 1;
}

message GetConversationResponse {
  Conversation conversation = 1;
}

message ListMessagesRequest {
  string conversation_id = 1;
}

message ListMessagesResponse {
  repeated Message messages = 1;
}

message DeleteConversationRequest {
  string conversation_id = 1;
}

message DeleteConversationResponse {}

message UpdateConversationRequest {
  string conversation_id = 1;
  Conversation conversation = 2;
}

message UpdateConversationResponse {
  Conversation conversation = 1;
}
